--- a/src/app/vistas/cabecera/menu/menu.component.html
+++ b/src/app/vistas/cabecera/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
-        <img src="../../../../assets/favicon.ico" width="30" height="30" alt="" loading="lazy">
+        <img src="../../../../assets/img/favicon.ico" width="30" height="30" alt="" loading="lazy">
       </a>
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
