--- a/src/app/vistas/cabecera/menu/menu.component.html
+++ b/src/app/vistas/cabecera/menu/menu.component.html
@@ -22,9 +22,9 @@
             <a  class="nav-link" routerLink="/sobre"> Sobre de</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <form onsubmit="return false" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar" (keyup.enter)="buscando(barra.value)" #barra>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="buscando(barra.value)">Buscar</button>
       </form>
     </div>
   </nav>
